Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-19647

[FTS] cannot open index files after compaction happens and server restarts

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 4.5.0
    • 4.5.0
    • fts
    • None
    • Untriaged
    • Unknown
    • ForestDB: Oct 17 - Nov 4

    Description

      The following was observed on perf test machine.

      1. Load 1M wikipedia documents
      2. Let it sit over the weekend (long enough for auto-compaction daemon to run, which seems to default to about 8 hours now)
      3. Stop/Start Couchbase Server

      Observe the following in FTS log:
      2016-05-16T09:57:21.584-07:00 [INFO] manager: opening pindex path: /opt/couchbase/data/@fts/perf_fts_index_3855085e1615aedd_0ffd4517.pindex
      [FDB ERR] Error in OPEN on a database file '/opt/couchbase/data/@fts/perf_fts_index_3855085e1615aedd_0ffd4517.pindex/store.0', errno = 2: 'No such file or directory'
      2016-05-16T09:57:22.333-07:00 [INFO] manager: opening pindex path: /opt/couchbase/data/@fts/perf_fts_index_3855085e1615aedd_24e7ea2d.pindex
      [FDB ERR] Error in OPEN on a database file '/opt/couchbase/data/@fts/perf_fts_index_3855085e1615aedd_24e7ea2d.pindex/store.0', errno = 2: 'No such file or directory'
      2016-05-16T09:57:23.024-07:00 [INFO] manager: opening pindex path: /opt/couchbase/data/@fts/perf_fts_index_3855085e1615aedd_27184a97.pindex
      [FDB ERR] Error in OPEN on a database file '/opt/couchbase/data/@fts/perf_fts_index_3855085e1615aedd_27184a97.pindex/store.0', errno = 2: 'No such file or directory'
      2016-05-16T09:57:23.731-07:00 [INFO] manager: opening pindex path: /opt/couchbase/data/@fts/perf_fts_index_3855085e1615aedd_321cbb28.pindex
      [FDB ERR] Error in OPEN on a database file '/opt/couchbase/data/@fts/perf_fts_index_3855085e1615aedd_321cbb28.pindex/store.0', errno = 2: 'No such file or directory'
      2016-05-16T09:57:24.479-07:00 [INFO] manager: opening pindex path: /opt/couchbase/data/@fts/perf_fts_index_3855085e1615aedd_348f5c3c.pindex
      [FDB ERR] Error in OPEN on a database file '/opt/couchbase/data/@fts/perf_fts_index_3855085e1615aedd_348f5c3c.pindex/store.0', errno = 2: 'No such file or directory'
      2016-05-16T09:57:25.230-07:00 [INFO] manager: opening pindex path: /opt/couchbase/data/@fts/perf_fts_index_3855085e1615aedd_37fdcf3c.pindex
      [FDB ERR] Error in OPEN on a database file '/opt/couchbase/data/@fts/perf_fts_index_3855085e1615aedd_37fdcf3c.pindex/store.0', errno = 2: 'No such file or directory'
      2016-05-16T09:57:25.977-07:00 [INFO] manager: opening pindex path: /opt/couchbase/data/@fts/perf_fts_index_3855085e1615aedd_3cf74ad7.pindex
      [FDB ERR] Error in OPEN on a database file '/opt/couchbase/data/@fts/perf_fts_index_3855085e1615aedd_3cf74ad7.pindex/store.0', errno = 2: 'No such file or directory'
      2016-05-16T09:57:26.725-07:00 [INFO] manager: opening pindex path: /opt/couchbase/data/@fts/perf_fts_index_3855085e1615aedd_4728ab89.pindex
      [FDB ERR] Error in OPEN on a database file '/opt/couchbase/data/@fts/perf_fts_index_3855085e1615aedd_4728ab89.pindex/store.0', errno = 2: 'No such file or directory'
      2016-05-16T09:57:27.460-07:00 [INFO] manager: opening pindex path: /opt/couchbase/data/@fts/perf_fts_index_3855085e1615aedd_4a7ce4ca.pindex
      [FDB ERR] Error in OPEN on a database file '/opt/couchbase/data/@fts/perf_fts_index_3855085e1615aedd_4a7ce4ca.pindex/store.0', errno = 2: 'No such file or directory'
      2016-05-16T09:57:28.193-07:00 [INFO] manager: opening pindex path: /opt/couchbase/data/@fts/perf_fts_index_3855085e1615aedd_4cdba0cf.pindex
      [FDB ERR] Error in OPEN on a database file '/opt/couchbase/data/@fts/perf_fts_index_3855085e1615aedd_4cdba0cf.pindex/store.0', errno = 2: 'No such file or directory'
      2016-05-16T09:57:28.927-07:00 [INFO] manager: opening pindex path: /opt/couchbase/data/@fts/perf_fts_index_3855085e1615aedd_54127e67.pindex
      [FDB ERR] Error in OPEN on a database file '/opt/couchbase/data/@fts/perf_fts_index_3855085e1615aedd_54127e67.pindex/store.0', errno = 2: 'No such file or directory'
      2016-05-16T09:57:29.654-07:00 [INFO] manager: opening pindex path: /opt/couchbase/data/@fts/perf_fts_index_3855085e1615aedd_577e9974.pindex
      [FDB ERR] Error in OPEN on a database file '/opt/couchbase/data/@fts/perf_fts_index_3855085e1615aedd_577e9974.pindex/store.0', errno = 2: 'No such file or directory'
      2016-05-16T09:57:30.374-07:00 [INFO] manager: opening pindex path: /opt/couchbase/data/@fts/perf_fts_index_3855085e1615aedd_596cc6a1.pindex
      [FDB ERR] Error in OPEN on a database file '/opt/couchbase/data/@fts/perf_fts_index_3855085e1615aedd_596cc6a1.pindex/store.0', errno = 2: 'No such file or directory'
      2016-05-16T09:57:31.108-07:00 [INFO] manager: opening pindex path: /opt/couchbase/data/@fts/perf_fts_index_3855085e1615aedd_5b1351c0.pindex
      [FDB ERR] Error in OPEN on a database file '/opt/couchbase/data/@fts/perf_fts_index_3855085e1615aedd_5b1351c0.pindex/store.0', errno = 2: 'No such file or directory'
      2016-05-16T09:57:31.909-07:00 [INFO] manager: opening pindex path: /opt/couchbase/data/@fts/perf_fts_index_3855085e1615aedd_5c5f941e.pindex
      [FDB ERR] Error in OPEN on a database file '/opt/couchbase/data/@fts/perf_fts_index_3855085e1615aedd_5c5f941e.pindex/store.0', errno = 2: 'No such file or directory'
      2016-05-16T09:57:32.626-07:00 [INFO] manager: opening pindex path: /opt/couchbase/data/@fts/perf_fts_index_3855085e1615aedd_63ef8109.pindex
      [FDB ERR] Error in OPEN on a database file '/opt/couchbase/data/@fts/perf_fts_index_3855085e1615aedd_63ef8109.pindex/store.0', errno = 2: 'No such file or directory'
      2016-05-16T09:57:33.345-07:00 [INFO] manager: opening pindex path: /opt/couchbase/data/@fts/perf_fts_index_3855085e1615aedd_76ac2a42.pindex
      [FDB ERR] Error in OPEN on a database file '/opt/couchbase/data/@fts/perf_fts_index_3855085e1615aedd_76ac2a42.pindex/store.0', errno = 2: 'No such file or directory'
      2016-05-16T09:57:34.064-07:00 [INFO] manager: opening pindex path: /opt/couchbase/data/@fts/perf_fts_index_3855085e1615aedd_77082885.pindex
      [FDB ERR] Error in OPEN on a database file '/opt/couchbase/data/@fts/perf_fts_index_3855085e1615aedd_77082885.pindex/store.0', errno = 2: 'No such file or directory'

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mschoch Marty Schoch [X] (Inactive)
            mschoch Marty Schoch [X] (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                PagerDuty