MB-19647: Correctly suppress logcallback during file open recovery check

When a file is opened with auto compaction mode, the open logic
attempts to open the old compacted file to see if it needs to be
removed. During this time, it is necessary to correctly suppress
the log_callback to prevent false error messages like this..
[FDB ERR] Error in OPEN on a database file 'store.0', errno = 2: 'No such file or directory'

Change-Id: I20a65bf521634d074f51a393e1981257423bbfba
Reviewed-on: http://review.couchbase.org/64080
Reviewed-by: Chiyoung Seo <chiyoung@couchbase.com>
Tested-by: Chiyoung Seo <chiyoung@couchbase.com>